use svg-icon/svg-flag - components

--- a/public/icons/Боец.htm
+++ b/public/icons/Боец.htm
@@ -1,12 +1,14 @@
-<!doctype html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
+<!DOCTYPE html>
+<!-- saved from url=(0034)http://localhost:1234/fighter.html -->
+<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><style>body {transition: opacity ease-in 0.2s; } 
+body[unresolved] {opacity: 0; display: block; overflow: hidden; position: relative; } 
+</style>
+	
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="Description" content="Put your description here.">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Боец</title>
-	<link rel="stylesheet" href="main.ff53dd75.css">
+	<link rel="stylesheet" href="./Боец_files/main.b6459537.css">
 </head>
 <body>
 <main class="main pt-0 pt-md-4" style="overflow-x: hidden">
@@ -15,8 +17,8 @@
 			<div class="col-lg-8 d-flex flex-column pb-1">
 				<nav aria-label="breadcrumb">
 					<ol class="breadcrumb">
-						<li class="breadcrumb-item"><a href="#">Главная</a></li>
-						<li class="breadcrumb-item"><a href="#">Бойцы</a></li>
+						<li class="breadcrumb-item"><a href="http://localhost:1234/fighter.html#">Главная</a></li>
+						<li class="breadcrumb-item"><a href="http://localhost:1234/fighter.html#">Бойцы</a></li>
 						<li class="breadcrumb-item active" aria-current="page">Александр Отсука</li>
 					</ol>
 				</nav>
@@ -26,13 +28,13 @@
 						<div class="ads ads_sm mt-space-md mt-sm-3">Рекламный банер</div>
 						<div class="fighter-data__row mt-small-1">
 							<div class="fighter-data__avatar">
-								<img src="fighter-5.29cf5b25.jpg" alt="avatar" class="fighter-data__image">
+								<img src="./Боец_files/fighter-5.a3650872.jpg" alt="avatar" class="fighter-data__image">
 							</div>
 							<div class="fighter-data__info fighter-info">
 								<div class="fighter-info__item info-item">
 									<div class="info-item__key">Страна:</div>
 									<div class="info-item__value">
-										<svg-flag type="japan" height="24" width="24" viewBox="0 0 24 24"></svg-flag>
+										<svg-flag type="japan" height="24" width="24" viewbox="0 0 24 24"></svg-flag>
 										<span class="ml-2">Япония</span>
 									</div>
 								</div>
@@ -68,7 +70,9 @@
 							<div class="statistic-content__total total-card">
 								<div class="total-card__el-small">Всего поединков</div>
 								<div class="total-card__image mt-sm-2 mr-indent-15 mr-sm-0">
-									<svg-icon type="fist" height="64" width="70" viewBox="0 0 70 64"></svg-icon>
+									<svg width="70" height="64" class="label__icon" viewBox="0 0 70 64">
+										<use xlink:href="/icons.a2aebca7.svg#icon-fist"></use>
+									</svg>
 								</div>
 								<div class="total-card__el-big mt-sm-indent-45 text-right text-sm-left">123</div>
 							</div>
@@ -78,7 +82,9 @@
 									<div class="statistic-progress__header">
 										<div class="statistic-progress__left">
 											<div class="statistic-progress__icons green">
-												<svg-icon type="victories" height="18" width="18" viewBox="0 0 18 18"></svg-icon>
+												<svg width="18" height="18" viewBox="0 0 18 18">
+													<use xlink:href="/icons.a2aebca7.svg#icon-victories"></use>
+												</svg>
 											</div>
 											<div class="statistic-progress__title">Победы</div>
 										</div>
@@ -111,7 +117,9 @@
 									<div class="statistic-progress__header">
 										<div class="statistic-progress__left">
 											<div class="statistic-progress__icons red">
-												<svg-icon type="defeat" height="18" width="18" viewBox="0 0 18 18"></svg-icon>
+												<svg width="18" height="18" viewBox="0 0 18 18">
+													<use xlink:href="/icons.a2aebca7.svg#icon-defeat"></use>
+												</svg>
 											</div>
 											<div class="statistic-progress__title">Поражения</div>
 										</div>
@@ -144,7 +152,9 @@
 									<div class="statistic-progress__header">
 										<div class="statistic-progress__left">
 											<div class="statistic-progress__icons skyblue">
-												<svg-icon type="draw" height="18" width="18" viewBox="0 0 18 18"></svg-icon>
+												<svg width="18" height="18" viewBox="0 0 18 18">
+													<use xlink:href="/icons.a2aebca7.svg#icon-draw"></use>
+												</svg>
 											</div>
 											<div class="statistic-progress__title">Ничьи</div>
 										</div>
@@ -163,7 +173,9 @@
 									<div class="statistic-progress__header">
 										<div class="statistic-progress__left">
 											<div class="statistic-progress__icons gray-700">
-												<svg-icon type="canceled" height="18" width="18" viewBox="0 0 18 18"></svg-icon>
+												<svg width="18" height="18" viewBox="0 0 18 18">
+													<use xlink:href="/icons.a2aebca7.svg#icon-canceled"></use>
+												</svg>
 											</div>
 											<div class="statistic-progress__title">Не состоялись</div>
 										</div>
@@ -197,7 +209,9 @@
 							<div class="table__row">
 								<div class="table__col">
 									<div class="label-emoji green">
-										<svg-icon type="victories" height="24" width="24" viewBox="0 0 24 24"></svg-icon>
+										<svg width="24" height="24" class="icon" viewBox="0 0 24 24">
+											<use xlink:href="/icons.a2aebca7.svg#icon-victories"></use>
+										</svg>
 									</div>
 								</div>
 								<div class="table__col table__col_rival">
@@ -223,7 +237,9 @@
 							<div class="table__row">
 								<div class="table__col">
 									<div class="label-emoji skyblue">
-										<svg-icon type="draw" height="24" width="24" viewBox="0 0 24 24"></svg-icon>
+										<svg width="24" height="24" class="icon" viewBox="0 0 24 24">
+											<use xlink:href="/icons.a2aebca7.svg#icon-draw"></use>
+										</svg>
 									</div>
 								</div>
 								<div class="table__col table__col_rival">
@@ -249,7 +265,9 @@
 							<div class="table__row">
 								<div class="table__col">
 									<div class="label-emoji red">
-										<svg-icon type="defeat" height="24" width="24" viewBox="0 0 24 24"></svg-icon>
+										<svg width="24" height="24" class="icon" viewBox="0 0 24 24">
+											<use xlink:href="/icons.a2aebca7.svg#icon-defeat"></use>
+										</svg>
 									</div>
 								</div>
 								<div class="table__col table__col_rival">
@@ -275,7 +293,9 @@
 							<div class="table__row">
 								<div class="table__col">
 									<div class="label-emoji gray-700">
-										<svg-icon type="canceled" height="24" width="24" viewBox="0 0 24 24"></svg-icon>
+										<svg width="24" height="24" class="icon" viewBox="0 0 24 24">
+											<use xlink:href="/icons.a2aebca7.svg#icon-canceled"></use>
+										</svg>
 									</div>
 								</div>
 								<div class="table__col table__col_rival">
@@ -304,38 +324,46 @@
 						<nav aria-label="Page navigation example">
 							<div class="pagination-wrap mt-4">
 								<div class="page-item disabled">
-									<a class="page-link page-link_prev page-link_arrow" href="#" aria-label="Previous">
+									<a class="page-link page-link_prev page-link_arrow" href="http://localhost:1234/fighter.html#" aria-label="Previous">
 										<div aria-hidden="true">
-											<svg-icon type="doubleRight" height="12" width="13" viewBox="0 0 13 12"></svg-icon>
+											<svg width="13" height="12" class="icon" viewBox="0 0 13 12">
+												<use xlink:href="/icons.a2aebca7.svg#icon-doubleRight"></use>
+											</svg>
 										</div>
 									</a>
 								</div>
 								<div class="page-item disabled">
-									<a class="page-link page-link_prev page-link_arrow" href="#" aria-label="Previous">
+									<a class="page-link page-link_prev page-link_arrow" href="http://localhost:1234/fighter.html#" aria-label="Previous">
 										<div aria-hidden="true">
-											<svg-icon type="arrowRight" height="10" width="6" class="icon" viewBox="0 0 6 10"></svg-icon>
+											<svg width="6" height="10" class="icon" viewBox="0 0 6 10">
+												<use xlink:href="/icons.a2aebca7.svg#icon-arrowRight"></use>
+											</svg>
 										</div>
 									</a>
 								</div>
 								<ul class="pagination">
-									<li class="page-item active"><a class="page-link" href="#">1</a></li>
-									<li class="page-item"><a class="page-link" href="#">2</a></li>
-									<li class="page-item"><a class="page-link" href="#">3</a></li>
-									<li class="page-item"><a class="page-link" href="#">4</a></li>
-									<li class="page-item"><a class="page-link" href="#">5</a></li>
-									<li class="page-item"><a class="page-link" href="#">6</a></li>
+									<li class="page-item active"><a class="page-link" href="http://localhost:1234/fighter.html#">1</a></li>
+									<li class="page-item"><a class="page-link" href="http://localhost:1234/fighter.html#">2</a></li>
+									<li class="page-item"><a class="page-link" href="http://localhost:1234/fighter.html#">3</a></li>
+									<li class="page-item"><a class="page-link" href="http://localhost:1234/fighter.html#">4</a></li>
+									<li class="page-item"><a class="page-link" href="http://localhost:1234/fighter.html#">5</a></li>
+									<li class="page-item"><a class="page-link" href="http://localhost:1234/fighter.html#">6</a></li>
 								</ul>
 								<div class="page-item">
-									<a class="page-link page-link_arrow" href="#" aria-label="Next">
+									<a class="page-link page-link_arrow" href="http://localhost:1234/fighter.html#" aria-label="Next">
 										<div aria-hidden="true">
-											<svg-icon type="arrowRight" height="10" width="6" class="icon" viewBox="0 0 6 10"></svg-icon>
+											<svg width="6" height="10" class="icon" viewBox="0 0 6 10">
+												<use xlink:href="/icons.a2aebca7.svg#icon-arrowRight"></use>
+											</svg>
 										</div>
 									</a>
 								</div>
 								<div class="page-item">
-									<a class="page-link page-link_arrow" href="#" aria-label="Next">
+									<a class="page-link page-link_arrow" href="http://localhost:1234/fighter.html#" aria-label="Next">
 										<div aria-hidden="true">
-											<svg-icon type="doubleRight" height="12" width="13" viewBox="0 0 13 12"></svg-icon>
+											<svg width="13" height="12" class="icon" viewBox="0 0 13 12">
+												<use xlink:href="/icons.a2aebca7.svg#icon-doubleRight"></use>
+											</svg>
 										</div>
 									</a>
 								</div>
@@ -351,6 +379,6 @@
 	</div>
 </main>
 
-<script src="main.798ee141.js"></script>
-</body>
-</html>
+<script src="./Боец_files/main.1cbf646b.js"></script>
+
+</body></html>
