--- a/src/pages/fighters.html
+++ b/src/pages/fighters.html
@@ -45,9 +45,7 @@
 											 placeholder="Введите имя, фамилию или прозвище бойца"
 											 aria-label="Recipient's username with two button addons" aria-describedby="button-addon4">
 								<button type="submit" class="btn btn-red">
-									<svg width="24" height="24" class="icon" viewBox="0 0 24 24">
-										<use xlink:href="../../public/icons/icons.svg#icon-loupe"/>
-									</svg>
+									<svg-icon type="loupe" class="icon" height="24" width="24" viewBox="0 0 24 24"></svg-icon>
 								</button>
 							</div>
 						</form>
@@ -56,9 +54,7 @@
 					<div class="table fighter-table border-row mt-3">
 						<div class="table__row table__row-header">
 							<div class="table__title">
-								<svg width="16" height="16" class="icon" viewBox="0 0 16 16">
-									<use xlink:href="../../public/icons/icons.svg#icon-globe"/>
-								</svg>
+								<svg-icon type="globe" class="icon" height="16" width="16" viewBox="0 0 16 16"></svg-icon>
 							</div>
 							<div class="table__title">Фото</div>
 							<div class="table__title">Имя</div>
@@ -70,9 +66,7 @@
 						<div class="table__row">
 							<div class="table__col table__col_flag center">
 								<div class="table__icon-wrapper">
-									<svg width="20" height="14" class="icon" viewBox="0 0 20 14">
-										<use xlink:href="../../public/icons/flag.svg#flag-china"/>
-									</svg>
+									<svg-flag type="china" height="14" width="20" viewBox="0 0 20 14"></svg-flag>
 								</div>
 							</div>
 							<div class="table__col table__col_image">
@@ -96,9 +90,7 @@
 						<div class="table__row">
 							<div class="table__col table__col_flag center">
 								<div class="table__icon-wrapper">
-									<svg width="20" height="14" class="icon" viewBox="0 0 20 14">
-										<use xlink:href="../../public/icons/flag.svg#flag-china"/>
-									</svg>
+									<svg-flag type="china" height="14" width="20" viewBox="0 0 20 14"></svg-flag>
 								</div>
 							</div>
 							<div class="table__col table__col_image">
@@ -122,9 +114,7 @@
 						<div class="table__row">
 							<div class="table__col table__col_flag center">
 								<div class="table__icon-wrapper">
-									<svg width="20" height="14" class="icon" viewBox="0 0 20 14">
-										<use xlink:href="../../public/icons/flag.svg#flag-china"/>
-									</svg>
+									<svg-flag type="china" height="14" width="20" viewBox="0 0 20 14"></svg-flag>
 								</div>
 							</div>
 							<div class="table__col table__col_image">
@@ -148,9 +138,7 @@
 						<div class="table__row">
 							<div class="table__col table__col_flag center">
 								<div class="table__icon-wrapper">
-									<svg width="20" height="14" class="icon" viewBox="0 0 20 14">
-										<use xlink:href="../../public/icons/flag.svg#flag-china"/>
-									</svg>
+									<svg-flag type="china" height="14" width="20" viewBox="0 0 20 14"></svg-flag>
 								</div>
 							</div>
 							<div class="table__col table__col_image">
@@ -178,18 +166,14 @@
 							<div class="page-item disabled">
 								<a class="page-link page-link_prev page-link_arrow" href="#" aria-label="Previous">
 									<div aria-hidden="true">
-										<svg width="13" height="12" class="icon" viewBox="0 0 13 12">
-											<use xlink:href="../../public/icons/icons.svg#icon-doubleRight"/>
-										</svg>
+										<svg-icon type="doubleRight" height="12" width="13" viewBox="0 0 13 12"></svg-icon>
 									</div>
 								</a>
 							</div>
 							<div class="page-item disabled">
 								<a class="page-link page-link_prev page-link_arrow" href="#" aria-label="Previous">
 									<div aria-hidden="true">
-										<svg width="6" height="10" class="icon" viewBox="0 0 6 10">
-											<use xlink:href="../../public/icons/icons.svg#icon-arrowRight"/>
-										</svg>
+										<svg-icon type="arrowRight" height="10" width="6" class="icon" viewBox="0 0 6 10"></svg-icon>
 									</div>
 								</a>
 							</div>
@@ -204,18 +188,14 @@
 							<div class="page-item">
 								<a class="page-link page-link_arrow" href="#" aria-label="Next">
 									<div aria-hidden="true">
-										<svg width="6" height="10" class="icon" viewBox="0 0 6 10">
-											<use xlink:href="../../public/icons/icons.svg#icon-arrowRight"/>
-										</svg>
+										<svg-icon type="arrowRight" height="10" width="6" class="icon" viewBox="0 0 6 10"></svg-icon>
 									</div>
 								</a>
 							</div>
 							<div class="page-item">
 								<a class="page-link page-link_arrow" href="#" aria-label="Next">
 									<div aria-hidden="true">
-										<svg width="13" height="12" class="icon" viewBox="0 0 13 12">
-											<use xlink:href="../../public/icons/icons.svg#icon-doubleRight"/>
-										</svg>
+										<svg-icon type="doubleRight" height="12" width="13" viewBox="0 0 13 12"></svg-icon>
 									</div>
 								</a>
 							</div>
