--- a/src/pages/polls.html
+++ b/src/pages/polls.html
@@ -33,9 +33,9 @@
 								<div class="post-info gray-600 mt-2">
 									<div class="post-info__author blue-dark">KvladD</div>
 									<div class="post-info__date">
-										<svg width="12" height="14" class="icon-calendar" viewBox="0 0 12 14">
-											<use xlink:href="../../public/icons/icons.svg#icon-calendar"/>
-										</svg>
+										<svg-icon type="calendar" class="icon" height="14" width="12"
+															viewBox="0 0 12 14"></svg-icon>
+										
 										<span class="ml-1">17.01.2020</span>
 									</div>
 									<span class="post-info__time">13:20</span>
@@ -68,23 +68,19 @@
 							<div class="polls-item__footer">
 								<div class="preview-statistic gray-600">
 									<div class="preview-statistic__posts-counter">
-										<svg width="16" height="14" class="icon" viewBox="0 0 16 14">
-											<use xlink:href="../../public/icons/icons.svg#icon-users"/>
-										</svg>
+										<svg-icon type="users" class="icon" height="14" width="16"
+															viewBox="0 0 16 14"></svg-icon>
 										<div class="preview-statistic__num">666</div>
 									</div>
 									<div class="preview-statistic__posts-counter">
-										<svg width="14" height="14" class="icon" viewBox="0 0 14 14">
-											<use xlink:href="../../public/icons/icons.svg#icon-chat"/>
-										</svg>
+										<svg-icon type="chat" class="icon" height="14" width="14"
+															viewBox="0 0 14 14"></svg-icon>
 										<div class="preview-statistic__num">40</div>
 										<span class="preview-statistic__new-post">(+14)</span>
 									</div>
 									<div class="preview-statistic__posts-counter">
-
-										<svg width="14" height="14" class="icon" viewBox="0 0 14 12">
-											<use xlink:href="../../public/icons/icons.svg#icon-views"/>
-										</svg>
+										<svg-icon type="views" class="icon" height="14" width="14"
+															viewBox="0 0 14 12"></svg-icon>
 										<div class="preview-statistic__num">694</div>
 									</div>
 								</div>
@@ -98,9 +94,8 @@
 								<div class="post-info gray-600 mt-2">
 									<div class="post-info__author blue-dark">KvladD</div>
 									<div class="post-info__date">
-										<svg width="12" height="14" class="icon-calendar" viewBox="0 0 12 14">
-											<use xlink:href="../../public/icons/icons.svg#icon-calendar"/>
-										</svg>
+										<svg-icon type="calendar" class="icon" height="14" width="12"
+															viewBox="0 0 12 14"></svg-icon>
 										<span class="ml-1">17.01.2020</span>
 									</div>
 									<span class="post-info__time">13:20</span>
@@ -134,23 +129,19 @@
 								<div class="polls-item__footer">
 									<div class="preview-statistic gray-600">
 										<div class="preview-statistic__posts-counter">
-											<svg width="16" height="14" class="icon" viewBox="0 0 16 14">
-												<use xlink:href="../../public/icons/icons.svg#icon-users"/>
-											</svg>
+											<svg-icon type="users" class="icon" height="14" width="16"
+																viewBox="0 0 16 14"></svg-icon>
 											<div class="preview-statistic__num">666</div>
 										</div>
 										<div class="preview-statistic__posts-counter">
-											<svg width="14" height="14" class="icon" viewBox="0 0 14 14">
-												<use xlink:href="../../public/icons/icons.svg#icon-chat"/>
-											</svg>
+											<svg-icon type="chat" class="icon" height="14" width="14"
+																viewBox="0 0 14 14"></svg-icon>
 											<div class="preview-statistic__num">40</div>
 											<span class="preview-statistic__new-post">(+14)</span>
 										</div>
 										<div class="preview-statistic__posts-counter">
-
-											<svg width="14" height="14" class="icon" viewBox="0 0 14 12">
-												<use xlink:href="../../public/icons/icons.svg#icon-views"/>
-											</svg>
+											<svg-icon type="views" class="icon" height="14" width="14"
+																viewBox="0 0 14 12"></svg-icon>
 											<div class="preview-statistic__num">694</div>
 										</div>
 									</div>
