--- a/src/pages/profile-message.html
+++ b/src/pages/profile-message.html
@@ -78,9 +78,8 @@
 										<div class="message-body__date post-info">
 											<div class="post-info__author">NoMas</div>
 											<div class="post-info__date">
-												<svg width="12" height="14" class="icon-calendar" viewBox="0 0 12 14">
-													<use xlink:href="../../public/icons/icons.svg#icon-calendar"/>
-												</svg>
+												<svg-icon type="calendar" class="icon" height="14" width="12"
+																	viewBox="0 0 12 14"></svg-icon>
 												<span class="ml-1">17.01.2020</span>
 											</div>
 											<span class="post-info__time">13:20</span>
@@ -90,9 +89,8 @@
 									<div class="message-body sent-el">
 										<div class="message-body__date post-info">
 											<div class="post-info__date">
-												<svg width="12" height="14" class="icon-calendar" viewBox="0 0 12 14">
-													<use xlink:href="../../public/icons/icons.svg#icon-calendar"/>
-												</svg>
+												<svg-icon type="calendar" class="icon" height="14" width="12"
+																	viewBox="0 0 12 14"></svg-icon>
 												<span class="ml-1">17.01.2020</span>
 											</div>
 											<span class="post-info__time">13:20</span>
@@ -103,9 +101,8 @@
 										<div class="message-body__date post-info">
 											<div class="post-info__author">NoMas</div>
 											<div class="post-info__date">
-												<svg width="12" height="14" class="icon-calendar" viewBox="0 0 12 14">
-													<use xlink:href="../../public/icons/icons.svg#icon-calendar"/>
-												</svg>
+												<svg-icon type="calendar" class="icon" height="14" width="12"
+																	viewBox="0 0 12 14"></svg-icon>
 												<span class="ml-1">17.01.2020</span>
 											</div>
 											<span class="post-info__time">13:20</span>
@@ -115,9 +112,8 @@
 									<div class="message-body sent-el">
 										<div class="message-body__date post-info">
 											<div class="post-info__date">
-												<svg width="12" height="14" class="icon-calendar" viewBox="0 0 12 14">
-													<use xlink:href="../../public/icons/icons.svg#icon-calendar"/>
-												</svg>
+												<svg-icon type="calendar" class="icon" height="14" width="12"
+																	viewBox="0 0 12 14"></svg-icon>
 												<span class="ml-1">17.01.2020</span>
 											</div>
 											<span class="post-info__time">13:20</span>
@@ -128,9 +124,8 @@
 										<div class="message-body__date post-info">
 											<div class="post-info__author">NoMas</div>
 											<div class="post-info__date">
-												<svg width="12" height="14" class="icon-calendar" viewBox="0 0 12 14">
-													<use xlink:href="../../public/icons/icons.svg#icon-calendar"/>
-												</svg>
+												<svg-icon type="calendar" class="icon" height="14" width="12"
+																	viewBox="0 0 12 14"></svg-icon>
 												<span class="ml-1">17.01.2020</span>
 											</div>
 											<span class="post-info__time">13:20</span>
@@ -146,9 +141,8 @@
 										<div class="message-body__date post-info">
 											<div class="post-info__author">NoMas</div>
 											<div class="post-info__date">
-												<svg width="12" height="14" class="icon-calendar" viewBox="0 0 12 14">
-													<use xlink:href="../../public/icons/icons.svg#icon-calendar"/>
-												</svg>
+												<svg-icon type="calendar" class="icon" height="14" width="12"
+																	viewBox="0 0 12 14"></svg-icon>
 												<span class="ml-1">17.01.2020</span>
 											</div>
 											<span class="post-info__time">13:20</span>
@@ -164,9 +158,8 @@
 										<div class="message-body__date post-info">
 											<div class="post-info__author">NoMas</div>
 											<div class="post-info__date">
-												<svg width="12" height="14" class="icon-calendar" viewBox="0 0 12 14">
-													<use xlink:href="../../public/icons/icons.svg#icon-calendar"/>
-												</svg>
+												<svg-icon type="calendar" class="icon" height="14" width="12"
+																	viewBox="0 0 12 14"></svg-icon>
 												<span class="ml-1">17.01.2020</span>
 											</div>
 											<span class="post-info__time">13:20</span>
@@ -181,9 +174,9 @@
 									<div class="message-body sent-el">
 										<div class="message-body__date post-info">
 											<div class="post-info__date">
-												<svg width="12" height="14" class="icon-calendar" viewBox="0 0 12 14">
-													<use xlink:href="../../public/icons/icons.svg#icon-calendar"/>
-												</svg>
+												<svg-icon type="calendar" class="icon" height="14" width="12"
+																	viewBox="0 0 12 14"></svg-icon>
+
 												<span class="ml-1">17.01.2020</span>
 											</div>
 											<span class="post-info__time">13:20</span>
@@ -193,9 +186,8 @@
 									<div class="message-body sent-el">
 										<div class="message-body__date post-info">
 											<div class="post-info__date">
-												<svg width="12" height="14" class="icon-calendar" viewBox="0 0 12 14">
-													<use xlink:href="../../public/icons/icons.svg#icon-calendar"/>
-												</svg>
+												<svg-icon type="calendar" class="icon" height="14" width="12"
+																	viewBox="0 0 12 14"></svg-icon>
 												<span class="ml-1">17.01.2020</span>
 											</div>
 											<span class="post-info__time">13:20</span>
@@ -218,18 +210,18 @@
 							<div class="page-item disabled">
 								<a class="page-link page-link_prev page-link_arrow" href="#" aria-label="Previous">
 									<div aria-hidden="true">
-										<svg width="13" height="12" class="icon" viewBox="0 0 13 12">
-											<use xlink:href="../../public/icons/icons.svg#icon-doubleRight"/>
-										</svg>
+										<svg-icon type="doubleRight" class="icon" height="12" width="13"
+															viewBox="0 0 13 12"></svg-icon>
+
 									</div>
 								</a>
 							</div>
 							<div class="page-item disabled">
 								<a class="page-link page-link_prev page-link_arrow" href="#" aria-label="Previous">
 									<div aria-hidden="true">
-										<svg width="6" height="10" class="icon" viewBox="0 0 6 10">
-											<use xlink:href="../../public/icons/icons.svg#icon-arrowRight"/>
-										</svg>
+										<svg-icon type="arrowRight" class="icon" height="10" width="6"
+															viewBox="0 0 6 10"></svg-icon>
+
 									</div>
 								</a>
 							</div>
@@ -244,18 +236,16 @@
 							<div class="page-item">
 								<a class="page-link page-link_arrow" href="#" aria-label="Next">
 									<div aria-hidden="true">
-										<svg width="6" height="10" class="icon" viewBox="0 0 6 10">
-											<use xlink:href="../../public/icons/icons.svg#icon-arrowRight"/>
-										</svg>
+										<svg-icon type="arrowRight" class="icon" height="10" width="6"
+															viewBox="0 0 6 10"></svg-icon>
 									</div>
 								</a>
 							</div>
 							<div class="page-item">
 								<a class="page-link page-link_arrow" href="#" aria-label="Next">
 									<div aria-hidden="true">
-										<svg width="13" height="12" class="icon" viewBox="0 0 13 12">
-											<use xlink:href="../../public/icons/icons.svg#icon-doubleRight"/>
-										</svg>
+										<svg-icon type="doubleRight" class="icon" height="12" width="13"
+															viewBox="0 0 13 12"></svg-icon>
 									</div>
 								</a>
 							</div>
