--- a/src/pages/authorization.html
+++ b/src/pages/authorization.html
@@ -26,15 +26,11 @@
 					</div>
 					<button class="btn  btn-red btn-md text-white text-uppercase">Зарегистрироваться</button>
 					<button class="btn btn-blue btn-md text-white text-uppercase">
-						<svg width="22" height="25" class="icon" viewBox="0 0 22 25">
-							<use xlink:href="../../public/icons/icons.svg#icon-fb"/>
-						</svg>
+						<svg-icon type="fb" height="25" width="22" viewBox="0 0 22 25"></svg-icon>
 						<span>Войти через Facebook</span>
 					</button>
 					<button class="btn btn-blue-light btn-md text-white text-uppercase">
-						<svg width="28" height="28" class="icon" viewBox="0 0 28 28">
-							<use xlink:href="../../public/icons/icons.svg#icon-vk"/>
-						</svg>
+						<svg-icon type="vk" height="28" width="28" viewBox="0 0 28 28"></svg-icon>
 						<span>Войти через  Вконтакте</span>
 					</button>
 				</div>
@@ -56,15 +52,11 @@
 						<button class="btn  btn-gray-250 btn-md text-blue-dark text-uppercase">Забыли пароль?</button>
 					</div>
 					<button class="btn btn-blue btn-md text-white text-uppercase">
-						<svg width="22" height="25" class="icon" viewBox="0 0 22 25">
-							<use xlink:href="../../public/icons/icons.svg#icon-fb"/>
-						</svg>
+						<svg-icon type="fb" height="25" width="22" viewBox="0 0 22 25"></svg-icon>
 						<span>Войти через Facebook</span>
 					</button>
 					<button class="btn btn-blue-light btn-md text-white text-uppercase">
-						<svg width="28" height="28" class="icon" viewBox="0 0 28 28">
-							<use xlink:href="../../public/icons/icons.svg#icon-vk"/>
-						</svg>
+						<svg-icon type="vk" height="28" width="28" viewBox="0 0 28 28"></svg-icon>
 						<span>Войти через  Вконтакте</span>
 					</button>
 				</div>
