--- a/src/pages/fighter.html
+++ b/src/pages/fighter.html
@@ -32,10 +32,8 @@
 								<div class="fighter-info__item info-item">
 									<div class="info-item__key">Страна:</div>
 									<div class="info-item__value">
-										<svg width="24" height="24" class="label__icon" viewBox="0 0 24 24">
-											<use xlink:href="../../public/icons/flag.svg#flag-japan"/>
-										</svg>
-										<span>Япония</span>
+										<svg-flag type="japan" height="24" width="24" viewBox="0 0 24 24"></svg-flag>
+										<span class="ml-2">Япония</span>
 									</div>
 								</div>
 								<div class="fighter-info__row">
@@ -70,9 +68,7 @@
 							<div class="statistic-content__total total-card">
 								<div class="total-card__el-small">Всего поединков</div>
 								<div class="total-card__image mt-sm-2 mr-indent-15 mr-sm-0">
-									<svg width="70" height="64" class="label__icon" viewBox="0 0 70 64">
-										<use xlink:href="../../public/icons/icons.svg#icon-fist"/>
-									</svg>
+									<svg-icon type="fist" height="64" width="70" viewBox="0 0 70 64"></svg-icon>
 								</div>
 								<div class="total-card__el-big mt-sm-indent-45 text-right text-sm-left">123</div>
 							</div>
@@ -82,9 +78,7 @@
 									<div class="statistic-progress__header">
 										<div class="statistic-progress__left">
 											<div class="statistic-progress__icons green">
-												<svg width="18" height="18" viewBox="0 0 18 18">
-													<use xlink:href="../../public/icons/icons.svg#icon-victories"/>
-												</svg>
+												<svg-icon type="victories" height="18" width="18" viewBox="0 0 18 18"></svg-icon>
 											</div>
 											<div class="statistic-progress__title">Победы</div>
 										</div>
@@ -118,9 +112,7 @@
 									<div class="statistic-progress__header">
 										<div class="statistic-progress__left">
 											<div class="statistic-progress__icons red">
-												<svg width="18" height="18" viewBox="0 0 18 18">
-													<use xlink:href="../../public/icons/icons.svg#icon-defeat"/>
-												</svg>
+												<svg-icon type="defeat" height="18" width="18" viewBox="0 0 18 18"></svg-icon>
 											</div>
 											<div class="statistic-progress__title">Поражения</div>
 										</div>
@@ -154,9 +146,7 @@
 									<div class="statistic-progress__header">
 										<div class="statistic-progress__left">
 											<div class="statistic-progress__icons skyblue">
-												<svg width="18" height="18" viewBox="0 0 18 18">
-													<use xlink:href="../../public/icons/icons.svg#icon-draw"/>
-												</svg>
+												<svg-icon type="draw" height="18" width="18" viewBox="0 0 18 18"></svg-icon>
 											</div>
 											<div class="statistic-progress__title">Ничьи</div>
 										</div>
@@ -176,9 +166,7 @@
 									<div class="statistic-progress__header">
 										<div class="statistic-progress__left">
 											<div class="statistic-progress__icons gray-700">
-												<svg width="18" height="18" viewBox="0 0 18 18">
-													<use xlink:href="../../public/icons/icons.svg#icon-canceled"/>
-												</svg>
+												<svg-icon type="canceled" height="18" width="18" viewBox="0 0 18 18"></svg-icon>
 											</div>
 											<div class="statistic-progress__title">Не состоялись</div>
 										</div>
@@ -213,9 +201,7 @@
 							<div class="table__row">
 								<div class="table__col">
 									<div class="label-emoji green">
-										<svg width="24" height="24" class="icon" viewBox="0 0 24 24">
-											<use xlink:href="../../public/icons/icons.svg#icon-victories"/>
-										</svg>
+										<svg-icon type="victories" height="24" width="24" viewBox="0 0 24 24"></svg-icon>
 									</div>
 								</div>
 								<div class="table__col table__col_rival">
@@ -241,9 +227,7 @@
 							<div class="table__row">
 								<div class="table__col">
 									<div class="label-emoji skyblue">
-										<svg width="24" height="24" class="icon" viewBox="0 0 24 24">
-											<use xlink:href="../../public/icons/icons.svg#icon-draw"/>
-										</svg>
+										<svg-icon type="draw" height="24" width="24" viewBox="0 0 24 24"></svg-icon>
 									</div>
 								</div>
 								<div class="table__col table__col_rival">
@@ -269,9 +253,7 @@
 							<div class="table__row">
 								<div class="table__col">
 									<div class="label-emoji red">
-										<svg width="24" height="24" class="icon" viewBox="0 0 24 24">
-											<use xlink:href="../../public/icons/icons.svg#icon-defeat"/>
-										</svg>
+										<svg-icon type="defeat" height="24" width="24" viewBox="0 0 24 24"></svg-icon>
 									</div>
 								</div>
 								<div class="table__col table__col_rival">
@@ -297,9 +279,7 @@
 							<div class="table__row">
 								<div class="table__col">
 									<div class="label-emoji gray-700">
-										<svg width="24" height="24" class="icon" viewBox="0 0 24 24">
-											<use xlink:href="../../public/icons/icons.svg#icon-canceled"/>
-										</svg>
+										<svg-icon type="canceled" height="24" width="24" viewBox="0 0 24 24"></svg-icon>
 									</div>
 								</div>
 								<div class="table__col table__col_rival">
@@ -330,18 +310,14 @@
 								<div class="page-item disabled">
 									<a class="page-link page-link_prev page-link_arrow" href="#" aria-label="Previous">
 										<div aria-hidden="true">
-											<svg width="13" height="12" class="icon" viewBox="0 0 13 12">
-												<use xlink:href="../../public/icons/icons.svg#icon-doubleRight"/>
-											</svg>
+											<svg-icon type="doubleRight" height="12" width="13" viewBox="0 0 13 12"></svg-icon>
 										</div>
 									</a>
 								</div>
 								<div class="page-item disabled">
 									<a class="page-link page-link_prev page-link_arrow" href="#" aria-label="Previous">
 										<div aria-hidden="true">
-											<svg width="6" height="10" class="icon" viewBox="0 0 6 10">
-												<use xlink:href="../../public/icons/icons.svg#icon-arrowRight"/>
-											</svg>
+											<svg-icon type="arrowRight" height="10" width="6" class="icon" viewBox="0 0 6 10"></svg-icon>
 										</div>
 									</a>
 								</div>
@@ -356,18 +332,14 @@
 								<div class="page-item">
 									<a class="page-link page-link_arrow" href="#" aria-label="Next">
 										<div aria-hidden="true">
-											<svg width="6" height="10" class="icon" viewBox="0 0 6 10">
-												<use xlink:href="../../public/icons/icons.svg#icon-arrowRight"/>
-											</svg>
+											<svg-icon type="arrowRight" height="10" width="6" class="icon" viewBox="0 0 6 10"></svg-icon>
 										</div>
 									</a>
 								</div>
 								<div class="page-item">
 									<a class="page-link page-link_arrow" href="#" aria-label="Next">
 										<div aria-hidden="true">
-											<svg width="13" height="12" class="icon" viewBox="0 0 13 12">
-												<use xlink:href="../../public/icons/icons.svg#icon-doubleRight"/>
-											</svg>
+											<svg-icon type="doubleRight" height="12" width="13" viewBox="0 0 13 12"></svg-icon>
 										</div>
 									</a>
 								</div>
