--- a/src/pages/header2.html
+++ b/src/pages/header2.html
@@ -23,30 +23,22 @@
 							data-lg-after="navbar-menu">
 						<li class="social-links__item active">
 							<a class="social-links__link" href="#">
-								<svg width="14" height="14" class="icon" viewBox="0 0 20 20">
-									<use xlink:href="../../public/icons/icons.svg#icon-insta"/>
-								</svg>
+								<svg-icon type="insta" height="14" width="14" viewBox="0 0 20 20"></svg-icon>
 							</a>
 						</li>
 						<li class="social-links__item">
 							<a class="social-links__link" href="#">
-								<svg width="14" height="14" class="icon" viewBox="0 0 20 20">
-									<use xlink:href="../../public/icons/icons.svg#icon-fb"/>
-								</svg>
+								<svg-icon type="fb" height="14" width="14" viewBox="0 0 20 20"></svg-icon>
 							</a>
 						</li>
 						<li class="social-links__item">
 							<a class="social-links__link" href="#">
-								<svg width="14" height="14" class="icon" viewBox="0 0 20 20">
-									<use xlink:href="../../public/icons/icons.svg#icon-tg"/>
-								</svg>
+								<svg-icon type="tg" height="14" width="14" viewBox="0 0 20 20"></svg-icon>
 							</a>
 						</li>
 						<li class="social-links__item">
 							<a class="social-links__link" href="#">
-								<svg width="14" height="14" class="icon" viewBox="0 0 20 20">
-									<use xlink:href="../../public/icons/icons.svg#icon-vk"/>
-								</svg>
+								<svg-icon type="vk" height="14" width="14" viewBox="0 0 20 20"></svg-icon>
 							</a>
 						</li>
 					</ul>
@@ -75,9 +67,7 @@
 							<li class="nav-user__list-item">
 								<div class="btn-group">
 									<button class="nav-user__link notice notice_sm">
-										<svg width="15" height="19" class="icon" viewBox="0 0 15 19">
-											<use xlink:href="../../public/icons/icons.svg#icon-user"/>
-										</svg>
+										<svg-icon type="user" height="19" width="15" class="icon" viewBox="0 0 15 19"></svg-icon>
 									</button>
 								</div>
 							</li>
@@ -194,9 +184,7 @@
 										</ul>
 									</div>
 									<button href="#" class="nav-user__link notice notice_sm" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"  >
-										<svg width="19" height="19" class="icon" viewBox="0 0 19 19">
-											<use xlink:href="../../public/icons/icons.svg#icon-chat-dots"/>
-										</svg>
+										<svg-icon type="chat-dots" height="19" width="19" class="icon" viewBox="0 0 19 19"></svg-icon>
 									</button>
 								</div>
 							</li>
@@ -313,25 +301,19 @@
 										</ul>
 									</div>
 									<button href="#" class="nav-user__link notice notice_sm" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"  >
-										<svg width="16" height="20" class="icon" viewBox="0 0 16 20">
-											<use xlink:href="../../public/icons/icons.svg#icon-bell"/>
-										</svg>
+										<svg-icon type="bell" height="20" width="16" class="icon" viewBox="0 0 16 20"></svg-icon>
 									</button>
 								</div>
 
 							</li>
 							<li class="nav-user__list-item">
 								<a href="#" class="nav-user__link">
-									<svg width="14" height="20" class="icon" viewBox="0 0 14 20">
-										<use xlink:href="../../public/icons/icons.svg#icon-bookmarks"/>
-									</svg>
+									<svg-icon type="bookmarks" height="20" width="14" class="icon" viewBox="0 0 14 20"></svg-icon>
 								</a>
 							</li>
 							<li class="nav-user__list-item">
 								<a href="#" class="nav-user__link">
-									<svg width="19" height="19" class="icon" viewBox="0 0 19 19">
-										<use xlink:href="../../public/icons/icons.svg#icon-leave"/>
-									</svg>
+									<svg-icon type="leave" height="19" width="19" class="icon" viewBox="0 0 19 19"></svg-icon>
 								</a>
 							</li>
 						</ul>
