--- a/src/pages/timetable.html
+++ b/src/pages/timetable.html
@@ -57,14 +57,13 @@
 								<div class="table__text_big">10:30</div>
 								<div class="badge-status active mb-1">live</div>
 							</div>
-							<div class="table__col table__col_event-mobile" >
+							<div class="table__col table__col_event-mobile">
 								<div class="table__text bold">GCFC MMA 10 Golden Coat Fighting Championship</div>
 							</div>
 							<div class="table__col table__col_place grid-col">
 								<div class="table__icon-wrapper">
-									<svg width="20" height="20" class="icon" viewBox="0 0 20 20">
-										<use xlink:href="../../public/icons/flag.svg#flag-ua"/>
-									</svg>
+									<svg-flag type="ua" class="icon" height="20" width="20"
+														viewBox="0 0 20 20"></svg-flag>
 								</div>
 								<div class="table__text">City Holiday, Kyiv, Ukraine</div>
 							</div>
@@ -77,14 +76,13 @@
 							<div class="table__col">
 								<div class="table__text_big">14:50</div>
 							</div>
-							<div class="table__col table__col_event-mobile" >
+							<div class="table__col table__col_event-mobile">
 								<div class="table__text bold">Rizin FF Rizin 23</div>
 							</div>
 							<div class="table__col table__col_place grid-col">
 								<div class="table__icon-wrapper">
-									<svg width="20" height="20" class="icon" viewBox="0 0 20 20">
-										<use xlink:href="../../public/icons/flag.svg#flag-japan"/>
-									</svg>
+									<svg-flag type="japan" class="icon" height="20" width="20"
+														viewBox="0 0 20 20"></svg-flag>
 								</div>
 								<div class="table__text">Pia Arena MM, Yokohama, Japan</div>
 							</div>
@@ -97,14 +95,13 @@
 							<div class="table__col">
 								<div class="table__text_big">20:00</div>
 							</div>
-							<div class="table__col table__col_event-mobile" >
+							<div class="table__col table__col_event-mobile">
 								<div class="table__text bold">Dana White's Contender Series Contender Series 2020: Week 83</div>
 							</div>
 							<div class="table__col table__col_place grid-col">
 								<div class="table__icon-wrapper">
-									<svg width="20" height="20" class="icon" viewBox="0 0 20 20">
-										<use xlink:href="../../public/icons/flag.svg#flag-usa"/>
-									</svg>
+									<svg-flag type="usa" class="icon" height="20" width="20"
+														viewBox="0 0 20 20"></svg-flag>
 								</div>
 								<div class="table__text">UFC APEX, Las Vegas, Nevada, United States</div>
 							</div>
@@ -118,14 +115,13 @@
 								<div class="table__text_big">22:00</div>
 								<div class="badge-status active mb-1">live</div>
 							</div>
-							<div class="table__col table__col_event-mobile" >
+							<div class="table__col table__col_event-mobile">
 								<div class="table__text bold">Dana White's Contender Series Contender Series 2020: Week 2</div>
 							</div>
 							<div class="table__col table__col_place grid-col">
 								<div class="table__icon-wrapper">
-									<svg width="20" height="20" class="icon" viewBox="0 0 20 20">
-										<use xlink:href="../../public/icons/flag.svg#flag-usa"/>
-									</svg>
+									<svg-flag type="usa" class="icon" height="20" width="20"
+														viewBox="0 0 20 20"></svg-flag>
 								</div>
 								<div class="table__text">UFC APEX, Las Vegas, Nevada, United States</div>
 							</div>
@@ -136,18 +132,17 @@
 							<div class="page-item disabled">
 								<a class="page-link page-link_prev page-link_arrow" href="#" aria-label="Previous">
 									<div aria-hidden="true">
-										<svg width="13" height="12" class="icon" viewBox="0 0 13 12">
-											<use xlink:href="../../public/icons/icons.svg#icon-doubleRight"/>
-										</svg>
+										<svg-icon type="doubleRight" class="icon" height="12" width="13"
+															viewBox="0 0 13 12"></svg-icon>
 									</div>
 								</a>
 							</div>
 							<div class="page-item disabled">
 								<a class="page-link page-link_prev page-link_arrow" href="#" aria-label="Previous">
 									<div aria-hidden="true">
-										<svg width="6" height="10" class="icon" viewBox="0 0 6 10">
-											<use xlink:href="../../public/icons/icons.svg#icon-arrowRight"/>
-										</svg>
+										<svg-icon type="arrowRight" class="icon" height="10" width="6"
+															viewBox="0 0 6 10"></svg-icon>
+
 									</div>
 								</a>
 							</div>
@@ -162,18 +157,17 @@
 							<div class="page-item">
 								<a class="page-link page-link_arrow" href="#" aria-label="Next">
 									<div aria-hidden="true">
-										<svg width="6" height="10" class="icon" viewBox="0 0 6 10">
-											<use xlink:href="../../public/icons/icons.svg#icon-arrowRight"/>
-										</svg>
+										<svg-icon type="arrowRight" class="icon" height="10" width="6"
+															viewBox="0 0 6 10"></svg-icon>
 									</div>
 								</a>
 							</div>
 							<div class="page-item">
 								<a class="page-link page-link_arrow" href="#" aria-label="Next">
 									<div aria-hidden="true">
-										<svg width="13" height="12" class="icon" viewBox="0 0 13 12">
-											<use xlink:href="../../public/icons/icons.svg#icon-doubleRight"/>
-										</svg>
+										<svg-icon type="doubleRight" class="icon" height="12" width="13"
+															viewBox="0 0 13 12"></svg-icon>
+										
 									</div>
 								</a>
 							</div>
