--- a/src/pages/timetable-fighter.html
+++ b/src/pages/timetable-fighter.html
@@ -46,35 +46,35 @@
 							<div class="duel-wrap__title post-title">Главный поединок</div>
 						</div>
 						<div class="duel-card mt-3">
-							<div class="duel-card__top">
-								<div class="duel-card__col">
-									<div class="duel-card__text-header text-md-right">
-										<div class="duel-card__name">Маурисио Руа</div>
-										<div class="duel-card__text">26-11-0</div>
+							<div class="duel-card__top duel-header">
+								<div class="duel-header__col">
+									<div class="duel-header__text-header text-md-right">
+										<div class="duel-header__name">Маурисио Руа</div>
+										<div class="duel-header__text">26-11-0</div>
 									</div>
-									<div class="duel-card__label label-emoji label-emoji_sm green">
+									<div class="duel-header__label label-emoji label-emoji_sm green">
 										<svg-icon type="victories" class="icon" height="20" width="20"
 															viewBox="0 0 20 20"></svg-icon>
 									</div>
-									<div class="duel-card__image">
+									<div class="duel-header__image">
 										<img src="../../public/images/fighter-6.jpg" alt="image maurisio">
 									</div>
 								</div>
 
-								<div class="duel-card__icon">
+								<div class="duel-header__icon">
 									<svg-icon type="vs" class="icon" height="36" width="31"
 														viewBox="0 0 31 36"></svg-icon>
 								</div>
-								<div class="duel-card__col revert">
-									<div class="duel-card__text-header">
-										<div class="duel-card__name">Маурисио Руа</div>
-										<div class="duel-card__text">26-11-0</div>
+								<div class="duel-header__col revert">
+									<div class="duel-header__text-header">
+										<div class="duel-header__name">Маурисио Руа</div>
+										<div class="duel-header__text">26-11-0</div>
 									</div>
-									<div class="duel-card__label label-emoji label-emoji_sm red">
+									<div class="duel-header__label label-emoji label-emoji_sm red">
 										<svg-icon type="defeat" class="icon" height="20" width="20"
 															viewBox="0 0 20 20"></svg-icon>
 									</div>
-									<div class="duel-card__image">
+									<div class="duel-header__image">
 										<img src="../../public/images/fighter-6.jpg" alt="image maurisio">
 									</div>
 								</div>
@@ -119,35 +119,35 @@
 								<div class="table__text_big">10</div>
 							</div>
 							<div class="table__col table__col_versus mb-3 mb-sm-0">
-									<div class="duel-card__top duel-inner">
-										<div class="duel-card__col">
-											<div class="duel-card__text-header text-md-right">
-												<div class="duel-card__name">Маурисио Руа</div>
-												<div class="duel-card__text">26-11-0</div>
+									<div class="duel-header duel-header_small">
+										<div class="duel-header__col">
+											<div class="duel-header__text-header text-md-right">
+												<div class="duel-header__name">Маурисио Руа</div>
+												<div class="duel-header__text">26-11-0</div>
 											</div>
-											<div class="duel-card__label label-emoji  text-green bg-sm-green">
+											<div class="duel-header__label label-emoji  text-green bg-sm-green">
 												<svg-icon type="victories" class="icon" height="20" width="20"
 																	viewBox="0 0 20 20"></svg-icon>
 											</div>
-											<div class="duel-card__image">
+											<div class="duel-header__image">
 												<img src="../../public/images/fighter-6.jpg" alt="image maurisio">
 											</div>
 										</div>
 
-										<div class="duel-card__icon">
+										<div class="duel-header__icon">
 											<svg-icon type="vs" class="icon" height="36" width="31"
 																viewBox="0 0 31 36"></svg-icon>
 										</div>
-										<div class="duel-card__col revert">
-											<div class="duel-card__text-header">
-												<div class="duel-card__name">Маурисио Руа</div>
-												<div class="duel-card__text">26-11-0</div>
+										<div class="duel-header__col revert">
+											<div class="duel-header__text-header">
+												<div class="duel-header__name">Маурисио Руа</div>
+												<div class="duel-header__text">26-11-0</div>
 											</div>
-											<div class="duel-card__label label-emoji text-red bg-sm-red">
+											<div class="duel-header__label label-emoji text-red bg-sm-red">
 												<svg-icon type="defeat" class="icon" height="20" width="20"
 																	viewBox="0 0 20 20"></svg-icon>
 											</div>
-											<div class="duel-card__image">
+											<div class="duel-header__image">
 												<img src="../../public/images/fighter-6.jpg" alt="image maurisio">
 											</div>
 										</div>
@@ -171,38 +171,35 @@
 								<div class="table__text_big">10</div>
 							</div>
 							<div class="table__col table__col_versus mb-3 mb-sm-0">
-								<div class="duel-card__top duel-inner">
-									<div class="duel-card__col">
-										<div class="duel-card__text-header text-md-right">
-											<div class="duel-card__name">Маурисио Руа</div>
-											<div class="duel-card__text">26-11-0</div>
+								<div class="duel-header duel-header_small">
+									<div class="duel-header__col">
+										<div class="duel-header__text-header text-md-right">
+											<div class="duel-header__name">Маурисио Руа</div>
+											<div class="duel-header__text">26-11-0</div>
 										</div>
-										<div class="duel-card__label label-emoji  text-green bg-sm-green">
+										<div class="duel-header__label label-emoji  text-green bg-sm-green">
 											<svg-icon type="victories" class="icon" height="20" width="20"
 																viewBox="0 0 20 20"></svg-icon>
 										</div>
-										<div class="duel-card__image">
+										<div class="duel-header__image">
 											<img src="../../public/images/fighter-6.jpg" alt="image maurisio">
 										</div>
 									</div>
 
-									<div class="duel-card__icon">
-										<svg-icon type="vs" class="icon" height="36" width="31"
-															viewBox="0 0 31 36"></svg-icon>
+									<div class="duel-header__icon">
 										<svg-icon type="vs" class="icon" height="36" width="31"
 															viewBox="0 0 31 36"></svg-icon>
 									</div>
-									<div class="duel-card__col revert">
-										<div class="duel-card__text-header">
-											<div class="duel-card__name">Маурисио Руа</div>
-											<div class="duel-card__text">26-11-0</div>
+									<div class="duel-header__col revert">
+										<div class="duel-header__text-header">
+											<div class="duel-header__name">Маурисио Руа</div>
+											<div class="duel-header__text">26-11-0</div>
 										</div>
-										<div class="duel-card__label label-emoji text-red bg-sm-red">
+										<div class="duel-header__label label-emoji text-red bg-sm-red">
 											<svg-icon type="defeat" class="icon" height="20" width="20"
 																viewBox="0 0 20 20"></svg-icon>
-											
 										</div>
-										<div class="duel-card__image">
+										<div class="duel-header__image">
 											<img src="../../public/images/fighter-6.jpg" alt="image maurisio">
 										</div>
 									</div>
@@ -226,36 +223,35 @@
 								<div class="table__text_big">10</div>
 							</div>
 							<div class="table__col table__col_versus mb-3 mb-sm-0">
-								<div class="duel-card__top duel-inner">
-									<div class="duel-card__col">
-										<div class="duel-card__text-header text-md-right">
-											<div class="duel-card__name">Маурисио Руа</div>
-											<div class="duel-card__text">26-11-0</div>
+								<div class="duel-header duel-header_small">
+									<div class="duel-header__col">
+										<div class="duel-header__text-header text-md-right">
+											<div class="duel-header__name">Маурисио Руа</div>
+											<div class="duel-header__text">26-11-0</div>
 										</div>
-										<div class="duel-card__label label-emoji  text-green bg-sm-green">
+										<div class="duel-header__label label-emoji  text-green bg-sm-green">
 											<svg-icon type="victories" class="icon" height="20" width="20"
 																viewBox="0 0 20 20"></svg-icon>
-											
 										</div>
-										<div class="duel-card__image">
+										<div class="duel-header__image">
 											<img src="../../public/images/fighter-6.jpg" alt="image maurisio">
 										</div>
 									</div>
 
-									<div class="duel-card__icon">
+									<div class="duel-header__icon">
 										<svg-icon type="vs" class="icon" height="36" width="31"
 															viewBox="0 0 31 36"></svg-icon>
 									</div>
-									<div class="duel-card__col revert">
-										<div class="duel-card__text-header">
-											<div class="duel-card__name">Маурисио Руа</div>
-											<div class="duel-card__text">26-11-0</div>
+									<div class="duel-header__col revert">
+										<div class="duel-header__text-header">
+											<div class="duel-header__name">Маурисио Руа</div>
+											<div class="duel-header__text">26-11-0</div>
 										</div>
-										<div class="duel-card__label label-emoji text-red bg-sm-red">
+										<div class="duel-header__label label-emoji text-red bg-sm-red">
 											<svg-icon type="defeat" class="icon" height="20" width="20"
 																viewBox="0 0 20 20"></svg-icon>
 										</div>
-										<div class="duel-card__image">
+										<div class="duel-header__image">
 											<img src="../../public/images/fighter-6.jpg" alt="image maurisio">
 										</div>
 									</div>
@@ -279,35 +275,35 @@
 								<div class="table__text_big">10</div>
 							</div>
 							<div class="table__col table__col_versus mb-3 mb-sm-0">
-								<div class="duel-card__top duel-inner">
-									<div class="duel-card__col">
-										<div class="duel-card__text-header text-md-right">
-											<div class="duel-card__name">Маурисио Руа</div>
-											<div class="duel-card__text">26-11-0</div>
+								<div class="duel-header duel-header_small">
+									<div class="duel-header__col">
+										<div class="duel-header__text-header text-md-right">
+											<div class="duel-header__name">Маурисио Руа</div>
+											<div class="duel-header__text">26-11-0</div>
 										</div>
-										<div class="duel-card__label label-emoji  text-green bg-sm-green">
+										<div class="duel-header__label label-emoji  text-green bg-sm-green">
 											<svg-icon type="victories" class="icon" height="20" width="20"
 																viewBox="0 0 20 20"></svg-icon>
 										</div>
-										<div class="duel-card__image">
+										<div class="duel-header__image">
 											<img src="../../public/images/fighter-6.jpg" alt="image maurisio">
 										</div>
 									</div>
 
-									<div class="duel-card__icon">
+									<div class="duel-header__icon">
 										<svg-icon type="vs" class="icon" height="36" width="31"
 															viewBox="0 0 31 36"></svg-icon>
 									</div>
-									<div class="duel-card__col revert">
-										<div class="duel-card__text-header">
-											<div class="duel-card__name">Маурисио Руа</div>
-											<div class="duel-card__text">26-11-0</div>
+									<div class="duel-header__col revert">
+										<div class="duel-header__text-header">
+											<div class="duel-header__name">Маурисио Руа</div>
+											<div class="duel-header__text">26-11-0</div>
 										</div>
-										<div class="duel-card__label label-emoji text-red bg-sm-red">
+										<div class="duel-header__label label-emoji text-red bg-sm-red">
 											<svg-icon type="defeat" class="icon" height="20" width="20"
 																viewBox="0 0 20 20"></svg-icon>
 										</div>
-										<div class="duel-card__image">
+										<div class="duel-header__image">
 											<img src="../../public/images/fighter-6.jpg" alt="image maurisio">
 										</div>
 									</div>
@@ -326,7 +322,58 @@
 								<div class="table__text">5:00</div>
 							</div>
 						</div>
+						<div class="table__row">
+							<div class="table__col center side-line">
+								<div class="table__text_big">10</div>
+							</div>
+							<div class="table__col table__col_versus mb-3 mb-sm-0">
+								<div class="duel-header duel-header_small">
+									<div class="duel-header__col">
+										<div class="duel-header__text-header text-md-right">
+											<div class="duel-header__name">Маурисио Руа</div>
+											<div class="duel-header__text">26-11-0</div>
+										</div>
+										<div class="duel-header__label label-emoji  text-green bg-sm-green">
+											<svg-icon type="victories" class="icon" height="20" width="20"
+																viewBox="0 0 20 20"></svg-icon>
+										</div>
+										<div class="duel-header__image">
+											<img src="../../public/images/fighter-6.jpg" alt="image maurisio">
+										</div>
+									</div>
 
+									<div class="duel-header__icon">
+										<svg-icon type="vs" class="icon" height="36" width="31"
+															viewBox="0 0 31 36"></svg-icon>
+									</div>
+									<div class="duel-header__col revert">
+										<div class="duel-header__text-header">
+											<div class="duel-header__name">Маурисио Руа</div>
+											<div class="duel-header__text">26-11-0</div>
+										</div>
+										<div class="duel-header__label label-emoji text-red bg-sm-red">
+											<svg-icon type="defeat" class="icon" height="20" width="20"
+																viewBox="0 0 20 20"></svg-icon>
+										</div>
+										<div class="duel-header__image">
+											<img src="../../public/images/fighter-6.jpg" alt="image maurisio">
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="table__col before-text pt-3 pt-sm-0" data-text="Судья">
+								<div class="table__text">Kevin MacDonald</div>
+							</div>
+							<div class="table__col before-text pt-3 pt-sm-0" data-text="Метод">
+								<div class="table__text">Decision (Split)</div>
+							</div>
+							<div class="table__col table__col_round label-col-sm before-atr blue-dark-100" data-before="Р">
+								<div class="table__text">3</div>
+							</div>
+							<div class="table__col table__col_time  label-col-sm before-atr blue-dark" data-before="В">
+								<div class="table__text">5:00</div>
+							</div>
+						</div>
 					</div>
 					<div class="ads mt-4 mt-sm-indent-45 mt-md-indent-80">Рекламный банер</div>
 				</section>
