add custom scrollbar - simplebar

--- a/src/pages/header2.html
+++ b/src/pages/header2.html
@@ -75,7 +75,7 @@
 								<div class="btn-group">
 									<div class="dropdown-menu notification-bar ">
 										<button class="notification-bar__btn btn btn-gray-450">Показать все ответы</button>
-										<ul class="notification-bar__list list-notification mt-3 scrollbar-custom">
+										<ul class="notification-bar__list list-notification mt-3" data-simplebar >
 											<li class="list-notification__item">
 												<div class="message-item message-item_sm">
 													<div class="message-item__image notice">
@@ -192,7 +192,7 @@
 								<div class="btn-group">
 									<div class="dropdown-menu notification-bar ">
 										<button class="notification-bar__btn btn btn-gray-450">Показать все ответы</button>
-										<ul class="notification-bar__list list-notification mt-3 scrollbar-custom">
+										<ul class="notification-bar__list list-notification mt-3" data-simplebar>
 											<li class="list-notification__item">
 												<div class="message-item message-item_sm">
 													<div class="message-item__image notice">
