--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -9,6 +9,13 @@
 	<link rel="stylesheet" href="../styles/main.scss">
 </head>
 <body style="overflow-x:hidden;">
+<noscript>
+	<style>
+		[data-simplebar] {
+			overflow: auto;
+		}
+	</style>
+</noscript>
 <div class="pt-md-full">
 	<header class="header fixed-md-top">
 		<div class="container-fluid container-md">
